--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-8_1_0.so filter=lfs diff=lfs merge=lfs -text
