--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ sysinfo.txt
 Assets/GrazieQuizImg/Free.meta
 Assets/Suriyun/URP_Upgrade.meta
 Assets/Resources/Audio.meta
+Assets/Lowpoly Forest Pack/Prefabs/UI_Prefabs.meta
+Assets/Resources/Prefabs/0_Campus.prefab_220225.meta
