그림자 편차조정

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ Assets/Suriyun/URP_Upgrade.meta
 Assets/Resources/Audio.meta
 Assets/Lowpoly Forest Pack/Prefabs/UI_Prefabs.meta
 Assets/Resources/Prefabs/0_Campus.prefab_220225.meta
+Assets/Scenes/Materials.meta
+ProjectSettings/ProjectSettings.asset
