미니게임2 테스트커밋

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Assets/Lowpoly Forest Pack/Prefabs/UI_Prefabs.meta
 Assets/Resources/Prefabs/0_Campus.prefab_220225.meta
 Assets/Scenes/Materials.meta
 ProjectSettings/ProjectSettings.asset
+Assets/BrokenVector/Inventory/hair inven image.meta
