미니게임 거의완성

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ Assets/Resources/Prefabs/0_Campus.prefab_220225.meta
 Assets/Scenes/Materials.meta
 ProjectSettings/ProjectSettings.asset
 Assets/BrokenVector/Inventory/hair inven image.meta
+Assets/Scripts/Scene_Field/Pet/Prefab.meta
+Assets/BrokenVector/Inventory.meta
+Assets/Scripts/Scene_Field/Pet/Prefab.meta
